--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap");
 
 :root {
-  --primary-color: #8bc34a;
-  --white: #fff;
+  --primary-color: #ffbd69;
+  --secondary-color: #412a56;
+  --white: #ffffff;
+  --global-font: Roboto;
+  --secondary-font: "Leckerli One", cursive;
 }
 
 * {
@@ -17,10 +21,14 @@ html {
 
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: var(--global-font);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.font {
+  font-family: var(--secondary-font);
 }
