--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   height: 6rem;
   width: 100%;
 }
