--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -3,7 +3,7 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
-  height: 400px;
+  height: 600px;
   margin: auto;
   /* background-color: var(--secondary-color); */
 }
@@ -25,10 +25,13 @@
   width: 50%;
   min-width: 150px;
   max-width: 230px;
+  margin-top: 1rem;
   justify-content: space-evenly;
   border: 1px solid #c4c4c4;
   padding: 0.2rem;
   border-radius: 5px;
+  text-decoration: none;
+  color: black;
 }
 
 .social-section > p {
