--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -2,9 +2,15 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: black;
+  background-color: var(--secondary-color);
   height: auto;
   width: 100%;
+}
+
+.title-home {
+  font-size: 5rem !important;
+  padding: 9rem 0rem !important;
+  font-family: "Leckerli One", cursive;
 }
 
 .home-banner__img {
@@ -15,7 +21,7 @@
 
 .home-banner > p {
   color: white;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   text-align: justify;
   padding: 3.5rem;
 }
