--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap");
 
 :root {
   --primary-color: #ffbd69;
   --secondary-color: #412a56;
   --white: #ffffff;
-  --global-font: Roboto;
+  --global-font: "Roboto", sans-serif;
   --secondary-font: "Leckerli One", cursive;
 }
 
