--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,11 @@ code {
 .font {
   font-family: var(--secondary-font);
 }
+
+.btn-back {
+  background-color: var(--secondary-color);
+  width: 100%;
+  border-radius: 10px;
+  color: white;
+  border-color: #412a56;
+}
