information map route

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,12 @@ code {
   height: auto;
   max-height: 200px;
 }
+
+.report-container {
+  padding: 1rem;
+}
+
+.i-map {
+  text-decoration: none;
+  color: white;
+}
