--- a/src/components/styles/InfoContainer.css
+++ b/src/components/styles/InfoContainer.css
@@ -1,41 +1,46 @@
 .container-info {
-    width: 80%;
-    height: auto;
-    padding: 1rem;
-    margin: auto;
-    min-width: 280px;
-    max-width: 400px;
-  }
-  
-  .container-comment-info {
-    background-color: var(--primary-color);
-    padding: 1rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: black;
-    font-weight: bold;
-  }
-  
-  .container-comment-info > p {
-    font-size: 1.2rem;
-  }
-  
-  .container-info-description {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    border-color: #c4c4c4;
-    border-style: solid;
-    border-width: 1px 1px 1px 1px;
-    border-radius: 10px 10px 10px 10px;
-  }
-  
+  width: 80%;
+  height: auto;
+  padding: 1rem;
+  margin: auto;
+  min-width: 280px;
+  max-width: 900px;
+}
+
+.container-comment-info {
+  background-color: var(--primary-color);
+  padding: 1rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: black;
+  font-weight: bold;
+}
+
+.container-comment-info > p {
+  font-size: 1.2rem;
+}
+
+.container-info-description {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-color: #c4c4c4;
+  border-style: solid;
+  border-width: 1px 1px 1px 1px;
+  border-radius: 10px 10px 10px 10px;
+}
+
+.container-info-description > p {
+  font-size: 1.2rem;
+}
+
+.img-comment-info {
+  width: 3rem;
+}
+
+@media (min-width: 800px) {
   .container-info-description > p {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
-  
-  .img-comment-info {
-    width: 3rem;
-  }
-  
+}
